--- a/linux-rt-bfq-git/PKGBUILD
+++ b/linux-rt-bfq-git/PKGBUILD
@@ -53,7 +53,7 @@ pkgbase=linux-rt-bfq-git
 _major=5.2
 _srcname=linux-rt-devel
 pkgver=5.2.rt1.r0.gb47957059cdc
-pkgrel=4
+pkgrel=5
 arch=('x86_64')
 url="https://mirrors.edge.kernel.org/pub/linux/kernel/projects/rt/"
 license=('GPL2')
@@ -68,6 +68,7 @@ _gcc_patch="enable_additional_cpu_optimizations_for_gcc_v9.1+_kernel_v4.13+.patc
 
 source=("git://git.kernel.org/pub/scm/linux/kernel/git/rt/linux-rt-devel.git/#branch=linux-${_major}.y-rt"
         "${_lucjanpath}/ll-patches/${_bfq_patch}"
+        "${_lucjanpath}/bfq-patches/0001-bfq-patches.patch"
         "${_lucjanpath}/bfq-paolo-dev-fix/0001-block-bfq-dev.patch"
         "${_gcc_path}/${_gcc_patch}"
         "${_lucjanpath}/arch-patches/0001-add-sysctl-to-disallow-unprivileged-CLONE_NEWUSER-by.patch"
@@ -383,6 +384,7 @@ done
 
 sha512sums=('SKIP'
             'ab20b4a5d9938b0b00a815c127d85fc8de2f1ad7b0f078fca78f511f4fc688ff9948a8bd225b68f1fe83c9cdce1f2561f689bc4dc319393e2ce6fc598b43ba71'
+            'a4d27f2003ee6cdd0a18957305c413363665c25bb89796bdc61353e66836767361e3eb7818e35e8726d709048328f4c4e93c6dcdaa35245d32eb1322b03fcca7'
             '4e0e51381543e607f66b48db7d2212dffc6209c2e5dc99f8fbdfa15d5752e8ab4323e1d4e1baa0820fd7bec67b84e99fa64910bf5e3c834370c5899b0421be7e'
             '8d9547ff38096b99d296cdec9875b816960c09db31acebb033e3660ba65475d1f310578282cac74947d75dff844dd22d7e7c2e4ded12368d32314fe145763752'
             '068b9f3bb5112a5684246d0a2ae46bb26d7ad3a642276f5ed37d802b50efc925297d8bd4684eb391676e9a97efbb426b4fcbe6fd751860c3f53d8c0ca7d5a1b2'
